# resources/model_created_at.go
@@ -1,0 +1,10 @@
+/*
+ * GENERATED. Do not modify. Your changes might be overwritten!
+ */
+
+package resources
+
+type CreatedAt struct {
+	Address   string `json:"address"`
+	CreatedAt string `json:"created_at"`
+}
