# resources/model_resource_type.go
@@ -11,9 +11,9 @@ const (
 	ADMIN_LOGIN        ResourceType = "admin_login"
 	AUTH_NONCE_MESSAGE ResourceType = "auth_nonce_message"
 	AUTH_NONCE_REQUEST ResourceType = "auth_nonce_request"
-	LOGIN              ResourceType = "login"
+	REFRESH_JWT        ResourceType = "refresh_jwt"
+	SESSION_JWT        ResourceType = "session_jwt"
+	JWT_PAIR           ResourceType = "jwt_pair"
 	LOGIN_REQUEST      ResourceType = "login_request"
 	REGISTER           ResourceType = "register"
-	REGISTRATION       ResourceType = "registration"
-	USER               ResourceType = "user"
 )
